# MCP-Weather

./: .env.example  .gitignore  README.md  demo_script.md  pyproject.toml  walkthrough.md
solution/: demo_client.py  weather_data.py  weather_server.py
src/: demo_client.py  weather_data.py  weather_server.py
