[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-weather-demo"
version = "0.1.0"
description = "A beginner-friendly MCP weather demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
weather-server = "weather_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
